# geotools

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py
benchmark/: bench.py  coordinate.py
geodev-python/: coord.pyi  geotools.c  vec.pyi
src/: export.c  export_vec.c
tests/: mock_bd09.csv  mock_gcj02.csv  mock_wgs84.csv  test_coord.py
