[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "geotools"
version = "0.1.0"
description = "Python interface for the geotools C library"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools"
]